Correccion de horrores ortograficos e implementacion de favicon

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The leading company in originium research and oriphaty treatment in the world">
-    <title>Rhodes Island - Home</title>
+    <meta name="description" content="The leading company in originium research and oripathy treatment in the world">
+    <title>Rhodes Island</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/pictrs/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/pictrs/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/pictrs/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/pictrs/favicon/site.webmanifest">
 </head>
 <body>
     <header>
@@ -45,16 +49,16 @@
             </a>
             <a href="./pages/Affiliates.html" class="Affiliates-Shortcut" data-aos="fade-left" data-aos-delay="300">
                 <img src="./assets/pictrs/Index-img2.png" alt="">
-                <p>Working alongside our partners, we seek to help in the devopment of novel tecnologies and dispel the predjuce and alienation among the diferent races of Terra.</p>
+                <p>Working alongside our partners, we seek to help in the development of novel technologies and dispel the prejudice and alienation among the different races of Terra.</p>
                 <span>See more</span>
             </a>
             <a href="./pages/Oripathy.html" class="Oripathy-Shortcut" data-aos="fade-zoom-in"
             data-aos-easing="ease-in-back"
             data-aos-delay="500"
             data-aos-offset="0">
-                <p class="P1">There are many aspects of this disease that arent fully understood, but we cannot quiver against the fear of the unknown.</p>
+                <p class="P1">There are many aspects of this disease that aren't fully understood, but we cannot quiver against the fear of the unknown.</p>
                 <img src="./assets/pictrs/Originium.png" alt="">
-                <p class="P2">To avoid the spreading of missinformation, is imperative to make the corretc knownlegh available to everyone.</p>
+                <p class="P2">To avoid the spreading of misinformation, is imperative to make the correct knowledge available to everyone.</p>
                 <span>See more</span>
             </a>
             <a href="./pages/Location.html" class="Location-Shortcut" data-aos="fade-right" data-aos-delay="300">
