--- a/pages/Location.html
+++ b/pages/Location.html
@@ -10,6 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/pictrs/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/pictrs/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/pictrs/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/pictrs/favicon/site.webmanifest">
 </head>
 <body>
     <header id="Header-Mq">
